--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
                         </mat-icon>
                         <div>
                             <span>20%</span>
-                            <p>Loss</p>
+                            <p>Growth</p>
                         </div>
                     </mat-card-content>
                 </mat-card>
