--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -28,12 +28,12 @@
     <ng-template #tableTemplate>
         <ng-container *ngIf="dataSource.data.length > 0; else noDataTemplate">
             <div class="table-wrapper">
-                <table mat-table [dataSource]="dataSource" id="table-data">
+                <table mat-table [dataSource]="dataSource" matSort id="table-data">
                     <!-- Dynamically generate columns -->
                     <ng-container *ngFor="let column of displayedColumns">
                         <ng-container [matColumnDef]="column">
-                            <th mat-header-cell *matHeaderCellDef> {{ column | titlecase }} </th>
-                            <td mat-cell *matCellDef="let element" (click)="handleGetDetail(element)"> {{ element[column] }} </td>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ column }} </th>
+                            <td mat-cell *matCellDef="let element" (click)="handleGetDetail($event, element)" [cdkCopyToClipboard]="element[column]"> {{ element[column] }} </td>
                         </ng-container>
                     </ng-container>
 
