--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -13,6 +13,12 @@
         }
     }
 
+    .totals {
+        p {
+            text-align: right;
+        }
+    }
+
     .range {
         margin-bottom: 20px;
     }
@@ -20,16 +26,17 @@
     .table-wrapper {
         position: relative;
         min-height: 200px;
-        max-height: 400px;
+        max-height: 600px;
         overflow: auto;
 
         table {
-            td, th {
-                overflow: hidden;
-                max-width: 150px;
-                text-overflow: ellipsis;
-                white-space: nowrap;
+            tr {
+                &:nth-child(even) {
+                    background-color: #edecec9c;
+                }
+            }
 
+            td, th {
                 mat-icon {
                     margin-right: 10px;
                     cursor: pointer;
