added link for advance rpt in sidenav

--- a/src/app/on-boarding/on-boarding.component.html
+++ b/src/app/on-boarding/on-boarding.component.html
@@ -2,7 +2,7 @@
     <div class="left">
         <div class="head">
             <h1 class="text-light"><a class="scrollto"><span>revAmp</span></a></h1>
-            <h1 class="title">Start your free trail</h1>
+            <h1 class="title">Start your free trial</h1>
             <div class="desc">
                 <mat-icon>check_circle</mat-icon>
                 <span>No Credit / Debeit card required</span>
