--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,72 +1,109 @@
 <section class="dashboard">
-    <h2>Dashboard</h2>
-    <div class="content">
-        <!-- left -->
-        <div class="left-section">
-            <div class="cards">
+    <div class="title-header">
+        <div class="actions">
+            <h2>{{ type.DSBTitle }} Dashboard</h2>
+            <!-- <h5 (click)="handleRoute()">Link</h5> -->
+        </div>
+        <div class="form">
+            <mat-form-field appearance="outline">
+                <mat-select placeholder="Select any Options" [(ngModel)]="key">
+                    @for (tile of tilesData; track tile) {
+                        <mat-option [value]="tile.DSBTitle" (onSelectionChange)="handleSelectionOption(tile)">{{tile.DSBTitle}}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+        </div>
+    </div>
+    <section class="tiles-dounught-cart">
+        <div class="tiles">
+            @for (tileData of tilesData; track tileData) {
                 <mat-card>
+                    <mat-card-header>
+                        <mat-icon>more_horiz</mat-icon>
+                    </mat-card-header>
                     <mat-card-content>
                         <mat-icon>
-                            payments
+                            point_of_sale
                         </mat-icon>
-                        <div>
-                            <span>50%</span>
-                            <p>Sales</p>
+                        <h3>{{ tileData.DisplayValue   | currency:'INR' }}</h3>
+                        <div class="details">
+                            <span class="title"> {{ tileData.DSBTitle }} </span>
+                            <span class="value">
+                                {{ tileData.RcdCount }}
+                            </span>
                         </div>
                     </mat-card-content>
                 </mat-card>
-                <mat-card>
-                    <mat-card-content>
-                        <mat-icon>
-                            trending_up
-                        </mat-icon>
-                        <div>
-                            <span>30%</span>
-                            <p>Profit</p>
-                        </div>
-                    </mat-card-content>
-                </mat-card>
-                <mat-card>
-                    <mat-card-content>
-                        <mat-icon>
-                            money
-                        </mat-icon>
-                        <div>
-                            <span>20%</span>
-                            <p>Growth</p>
-                        </div>
-                    </mat-card-content>
-                </mat-card>
+            }
+        </div>
+        <div class="dounught-cart">
+            <div class="title">
+                <h3>{{ type.DSBTitle }}</h3>
+                <h5>Yearly</h5>
             </div>
+            <canvas id="doughnutchart"></canvas>
         </div>
-        <!-- right -->
-        <div class="right-section">
-            <mat-card>
-                <mat-card-content>
-                    <div class="user-img">
-                        <img src="../../../assets/avatar.png" alt="">
-                    </div>
-                    <p>{{ userData.UsrName }}</p>
-                    <span>{{ userData.UserEmail }}</span>
-                </mat-card-content>
-                <mat-divider></mat-divider>
-                <mat-card-footer>
-                    <button mat-button color="primary">
-                        <mat-icon>
-                            phone
-                        </mat-icon>
-                        <a [href]="userData.UserMobNum">
-                            Contact
-                        </a>
-                    </button>
-                    <button mat-button color="warn" (click)="handleMail()">
-                        <mat-icon>
-                            mail
-                        </mat-icon>
-                        Message
-                    </button>
-                </mat-card-footer>
-            </mat-card>
-        </div>
+    </section>
+    <section class="line-bar-charts">
+        <mat-card class="linechart">
+            <mat-card-header>
+                <mat-card-title>
+                    {{ type.DSBTitle }}
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <canvas id="linechart"></canvas>
+            </mat-card-content>
+        </mat-card>
+        <mat-card class="barchart">
+            <mat-card-header>
+                <mat-card-title>
+                    {{ type.DSBTitle }}
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <canvas id="barchart"></canvas>
+            </mat-card-content>
+        </mat-card>
+    </section>
+    <div class="pie-chart-table">
+        <mat-card class="piechart">
+            <mat-card-header>
+                <mat-card-title>
+                    {{ type.DSBTitle }}
+                </mat-card-title>
+                <mat-card-subtitle>
+                    Yearly
+                </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <canvas id="piechart"></canvas>
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="table">
+            <mat-card-header>
+                <mat-card-title>
+                    {{ type.DSBTitle }}
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <div class="table-container">
+                    <table
+                        mat-table
+                        [dataSource]="dashboardTableData"
+                    >
+                        @for (column of displayColumns; track column) {
+                            <ng-container [matColumnDef]="column.toString()">
+                                <th mat-header-cell *matHeaderCellDef> {{ column }} </th>
+                                <td mat-cell *matCellDef="let element"> {{ element[column.toString()] }} </td>
+                            </ng-container>
+                        }
+                        <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
+                    </table>
+                </div>
+            </mat-card-content>
+        </mat-card>
     </div>
 </section>
