--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -4,167 +4,233 @@
     margin-top: 70px;
     padding: 20px;
 
-    h2 {
-        margin: 0 15px 0 0;
-        display: block;
-        padding: 7px 25px 7px 0;
-        color: $black-secondary;
-        text-transform: uppercase;
-        font-weight: 500;
-        font-size: 1.143rem;
-    }
+    .title-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
-    .content {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        column-gap: 20px;
-        row-gap: 20px;
+        .actions {
+            display: flex;
+            align-items: center;
 
-        .left-section {
-            .cards {
-                display: flex;
-                align-items: center;
-                flex-wrap: wrap;
-                gap: 20px;
-                margin-top: 20px;
+            h2 {
+                margin: 0 15px 0 0;
+                display: block;
+                padding: 7px 25px 7px 0;
+                color: $black-secondary;
+                text-transform: uppercase;
+                font-weight: 500;
+                font-size: 1.143rem;
+            }
 
-                mat-card {
-                    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
-
-                    &:hover {
-                        box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.2);
-                        transform: translateY(-4px) scale(1.02);
-                        transition: all .4s ease;
-                        -webkit-transition: all .4s ease;
-                    }
-
-                    mat-card-content {
-                        padding: 20px;
-                        display: flex;
-                        align-items: center;
-                        gap: 20px;
-
-                        span {
-                            font-weight: 300;
-                            font-size: 20px;
-                        }
-
-                        p {
-                            margin: 0;
-                            font-size: 25px;
-                            font-weight: 500;
-                            white-space: nowrap;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            width: 100px;
-                        }
-
-                        mat-icon {
-                            width: 50px;
-                            height: 50px;
-                            font-size: 40px;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            color: $secondary;
-                            border-radius: 50%;
-                            padding: 10px;
-                            background-color: $secondary-opacity;
-                        }
-                    }
-                }
+            h5 {
+                cursor: pointer;
             }
         }
+    }
 
-        .right-section {
-            width: 100%;
+    .tiles-dounught-cart {
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin-bottom: 20px;
+
+        .tiles {
+            display: flex;
+            flex: 1;
+            align-items: center;
+            gap: 20px;
+            flex-wrap: wrap;
+            margin-bottom: 20px;
+
             mat-card {
-                box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
-                margin-top: 20px;
+                padding: 0 20px;
+                width: 270px;
+                border-radius: 10px;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                background-color: #fff;
+
+                mat-card-header {
+                    justify-content: flex-end;
+
+                    mat-icon {
+                        color: $gray-secondary;
+                    }
+                }
 
                 mat-card-content {
-                    margin: 0 auto;
-                    padding: 20px;
-
-                    .user-img {
-                        img {
-                            width: 100%;
-                            height: 100%;
-                            background-color: #e1f0ff !important;
-                            color: #6993ff;
-                            border-radius: 50%;
-                        }
+                    mat-icon {
+                        color: $primary;
+                        background-color: $primary-opacity;
+                        padding: 15px;
+                        border-radius: 50%;
                     }
 
-                    p {
-                        text-align: center;
-                        font-size: 1.28rem;
-                        font-weight: 400;
-                        line-height: 1.2;
-                        color: $purple-navy;
+                    h3 {
+                        font-size: 20px;
                         margin-top: 10px;
-                        margin-bottom: 0px;
-                    }
-
-                    span {
-                        text-align: center;
-                        font-size: 1rem;
                         font-weight: 300;
-                        line-height: 1.2;
-                        color: $purple-navy;
+                        letter-spacing: 3px;
                     }
-                }
 
-                mat-card-footer {
-                    padding: 10px;
-                    margin: 0 auto;
-                    display: flex;
-                    align-items: center;
-                    gap: 20px;
+                    .details {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
 
-                    button {
-                        a {
-                            color: #6993ff;
-                            text-decoration: none;
+                        span {
+
+                            &.title {
+                                color: $black;
+                                font-weight: 600;
+                                letter-spacing: 2px;
+                                font-size: 16px;
+                            }
+
+                            &.value {
+                                color: #b5b5ac;
+                                font-weight: 400;
+                                // letter-spacing: 2px;
+                                font-size: 14px;
+                            }
                         }
+
                     }
+                }
+            }
+        }
+
+        .dounught-cart {
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+            padding: 20px;
+
+            .title {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                h5 {
+                    color: #b5b5ac;
+                }
+
+                h3, h5 {
+                    margin: 0px;
+                }
+            }
+
+        }
+    }
+
+
+    .line-bar-charts {
+        display: flex;
+        gap: 20px;
+        width: 100%;
+        margin-bottom: 20px;
+
+        mat-card {
+            width: 50%;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+        }
+    }
+
+    .pie-chart-table {
+        display: flex;
+        align-items: flex-start;
+        gap: 20px;
+        width: 100%;
+
+        mat-card {
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+
+            &.piechart {
+                width: 30%;
+            }
+
+            &.table {
+                width: 70%;
+
+                .table-container {
+                    position: relative;
+                    min-height: 200px;
+                    max-height: 350px;
+                    overflow: auto;
+                }
+            }
+
+
+        }
+    }
+}
+
+@media (max-width: 970px) {
+    .dashboard {
+        .tiles-dounught-cart {
+            .tiles {
+                mat-card {
+                    width: 265px;
+                }
+            }
+        }
+
+        .line-bar-charts {
+            flex-direction: column;
+            width: 100%;
+
+            .linechart, .barchart {
+                width: 100%;
+            }
+        }
+
+        .pie-chart-table {
+            flex-direction: column-reverse;
+
+            mat-card.table {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .dashboard {
+        .tiles-dounught-cart {
+            .tiles {
+                mat-card {
+                    width: 260px;
                 }
             }
         }
     }
 }
 
-@media (max-width: 525px) {
+@media (max-width: 425px)  {
     .dashboard {
-        .content {
-            mat-card {
-                width: 100%
+        .tiles-dounught-cart {
+            margin-bottom: 20px;
+
+            .tiles {
+                mat-card {
+                    width: 100%;
+                }
+            }
+
+            .dounught-cart {
+                width: 100%;
             }
         }
-    }
-}
 
-@media (min-width: 768px) {
-    .dashboard {
-        .content {
-            grid-template-columns: 1fr 1fr; // Two columns for tablets
-        }
-    }
-}
-
-@media (min-width: 992px) {
-    .dashboard {
-        .content {
-            grid-template-columns: 60% 40%; // Default for desktop
-        }
-    }
-}
-
-@media (min-width: 1265px) {
-    .dashboard {
-        .content {
-            grid-template-columns: 60% 40%; // Min-width for each column
+        .pie-chart-table {
+            mat-card.piechart {
+                width: 100%;
+            }
         }
     }
 }
