--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -8,6 +8,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
 
         .actions {
             display: flex;
@@ -55,7 +56,7 @@
                     justify-content: flex-end;
 
                     mat-icon {
-                        color: $gray-secondary;
+                        color: #b5b5ac;
                     }
                 }
 
@@ -89,13 +90,12 @@
                             }
 
                             &.value {
-                                color: #b5b5ac;
+                                color: $black-secondary;
                                 font-weight: 400;
-                                // letter-spacing: 2px;
                                 font-size: 14px;
+                                letter-spacing: 2px;
                             }
                         }
-
                     }
                 }
             }
@@ -162,6 +162,15 @@
                     min-height: 200px;
                     max-height: 350px;
                     overflow: auto;
+
+                    table.mat-mdc-table {
+                        white-space: nowrap;
+                        tr {
+                            &:nth-child(even) {
+                                background-color: #edecec9c;
+                            }
+                        }
+                    }
                 }
             }
 
